// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`duplicate vote 1`] = `
Object {
  "data": Object {
    "vote": null,
  },
  "errors": Array [
    Object {
      "locations": Array [
        Object {
          "column": 11,
          "line": 3,
        },
      ],
      "message": "Already voted for link: 1",
      "path": Array [
        "vote",
      ],
    },
  ],
}
`;

exports[`new vote 1`] = `
Object {
  "data": Object {
    "vote": Object {
      "id": "1",
      "link": Object {
        "description": "Ceg nudde vokori joh zuffer.",
        "id": "1",
        "url": "http://kun.mu/pup",
      },
      "user": Object {
        "email": "jomu@huhubur.zm",
        "id": "1",
        "name": "Danny",
      },
    },
  },
}
`;

exports[`not authenticated 1`] = `
Object {
  "data": Object {
    "vote": null,
  },
  "errors": Array [
    Object {
      "locations": Array [
        Object {
          "column": 11,
          "line": 3,
        },
      ],
      "message": "Not authenticated",
      "path": Array [
        "vote",
      ],
    },
  ],
}
`;
